Changelog
=========


2.0.4 (unreleased)
------------------

- Removed reset_grid_state action from the different tab configurations.
  The action is now integrated in the tabbedview tab-menu.
  [phgross]

- Dropped Plone 4.1 compatibility. Only 4.2 and up are supported.
  [lgraf]

2.0.3 (2012-06-19)
------------------

- Fixed translations
  [lgraf]

- Fixed BeautifulSoup related encoding problem in tooltip_helper
  [lgraf]

- Adjust encoding of accessor values, because they changed since the dexterity update.
  Issue #1420 Plone Version und Dexterity Version auf aktuellste Version heben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1420
  [phgross]

2.0.2 (2012-03-28)
------------------

- Add and change translations
  [ttschanz]


2.0.1 (2012-02-27)
------------------

- Added French translations
  [ttschanz]

- Update tooltiphelper. It now removes HTML-tags.
  [ttschanz]

- Add Handler for DocumentSent action.
  [ttschanz]



2.0 (2011-11-17)
----------------

- Add tooltip_helper which show the complete comment of a journal entry, in a tooltip.
  [phgross]

- added tests for new local_roles events on repositoryfolders and dossiers
  [eschmutz]

- changed journalentry action-type string for ILocalRolesAcquisitionActivated
  on IRepositoryFolderSchema
  [eschmutz]

- removed unused journalentry factories for Objects implementing ITask because
  tasks havent a journal history
  [eschmutz]

- changed journalentry action-type string for IObjectWillBeMovedEvent
  because it referenced to IObjectMovedEvent
  [eschmutz]

- added testsetup for jenkins
  [eschmutz]

- Removed zopemaster-check for journal-entries
  [eschmutz]

- Add reset_tableconfiguration action for every listing view.
  Issue #796 Zuruecksetzen der Tabellen-Konfiguration
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/796/
  [phgross]


- Implements generating journal entries for local_roles modifications on repositoryfolders or dossiers.